# HackMatrix

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  HackMatrix.desktop  LICENSE  README.md  UNSUPPORTED_APPLICATIONS  WAYLAND_PORT_PLAN  WAYLAND_STACKTRACE_TEST_PLAN.md  WAYLAND_SUPER_E_DEBUG_PLAN.md  boot-vm.sh  cityofcybernetics.kdenlive  compile_commands.json  config.yaml  distro_ideas  editor.conf  eslintrc.json  game-design.md  game-design.txt  imgui.ini  launch  line-count  makefile  matrix  mission  readme.md  refactor_ideas.txt  todo.md  ttyTerm
geo/openstreetmap/: CMakeLists.txt  compile_commands.json  makefile  voxelizer.h  worldGen.cpp
geo/openstreetmap/include/: apiInterface.h  building.h  geo.h  voxelizer.h
wlroots/: .editorconfig  .gitlab-ci.yml  .mailmap  CONTRIBUTING.md  LICENSE  README.md  meson.build  meson.options  release.sh
wlroots/.builds/: alpine.yml  archlinux.yml  freebsd.yml
wlroots/.gitlab/issue_templates/: Default.md
wlroots/backend/: backend.c  meson.build
wlroots/backend/drm/: atomic.c  backend.c  drm.c  fb.c  gen_pnpids.sh  legacy.c  libliftoff.c  meson.build  monitor.c  properties.c  renderer.c  util.c
wlroots/backend/headless/: backend.c  output.c
wlroots/backend/libinput/: backend.c  events.c  keyboard.c  meson.build  pointer.c  switch.c  tablet_pad.c  tablet_tool.c  touch.c
wlroots/backend/multi/: backend.c
wlroots/backend/session/: meson.build  session.c
wlroots/backend/wayland/: backend.c  meson.build  output.c  pointer.c  seat.c  tablet_v2.c
wlroots/backend/x11/: backend.c  input_device.c  output.c
wlroots/docs/: architecture.md  env_vars.md
wlroots/examples/: cairo-buffer.c  embedded.c  meson.build  output-layers.c  output-layout.c  pointer.c  rotation.c  scene-graph.c  simple.c  tablet.c  touch.c
wlroots/include/: meson.build
wlroots/include/backend/: headless.h  libinput.h  multi.h  wayland.h  x11.h
wlroots/include/backend/drm/: drm.h  fb.h  iface.h  properties.h  renderer.h  util.h
wlroots/include/backend/session/: session.h
wlroots/include/render/: color.h  dmabuf.h  drm_format_set.h  egl.h  gles2.h  pixel_format.h  pixman.h  vulkan.h  wlr_renderer.h
wlroots/include/render/allocator/: drm_dumb.h  gbm.h  shm.h  udmabuf.h
wlroots/include/types/: wlr_buffer.h  wlr_data_device.h  wlr_keyboard.h  wlr_output.h  wlr_region.h  wlr_scene.h  wlr_seat.h  wlr_subcompositor.h  wlr_tablet_v2.h  wlr_xdg_shell.h
wlroots/include/util/: array.h  env.h  matrix.h  mem.h  rect_union.h  set.h  shm.h  time.h  token.h  utf8.h
wlroots/include/wlr/: backend.h  config.h.in  meson.build  xcursor.h  xwayland.h
wlroots/include/wlr/backend/: drm.h  headless.h  interface.h  libinput.h  multi.h  session.h  wayland.h  x11.h
wlroots/include/wlr/interfaces/: wlr_buffer.h  wlr_ext_image_capture_source_v1.h  wlr_keyboard.h  wlr_output.h  wlr_pointer.h  wlr_tablet_pad.h
wlroots/include/wlr/render/: allocator.h  (+12 more)
wlroots/include/xcursor/: cursor_data.h
wlroots/include/xwayland/: selection.h  xwm.h
wlroots/protocol/: input-method-unstable-v2.xml  meson.build  wlr-export-dmabuf-unstable-v1.xml
wlroots/render/: color.c  color_fallback.c  color_lcms2.c  dmabuf.c  dmabuf_fallback.c  dmabuf_linux.c  drm_format_set.c  drm_syncobj.c  egl.c  meson.build  pass.c  pixel_format.c  swapchain.c  wlr_renderer.c  wlr_texture.c
wlroots/render/allocator/: allocator.c  drm_dumb.c  gbm.c  meson.build  shm.c  udmabuf.c
wlroots/render/gles2/: meson.build  pass.c  pixel_format.c  renderer.c  texture.c
wlroots/render/pixman/: meson.build  pass.c  renderer.c
wlroots/render/vulkan/: meson.build  pass.c  pixel_format.c  renderer.c  texture.c  util.c  vulkan.c
wlroots/subprojects/: libdisplay-info.wrap  libdrm.wrap  libliftoff.wrap  libxkbcommon.wrap  pixman.wrap  seatd.wrap  v4l-utils.wrap  wayland-protocols.wrap  wayland.wrap
wlroots/tinywl/: .gitignore  Makefile  README.md  meson.build  tinywl.c
wlroots/types/: meson.build  wlr_alpha_modifier_v1.c  wlr_color_management_v1.c  wlr_color_representation_v1.c  wlr_compositor.c  wlr_content_type_v1.c  wlr_cursor.c  wlr_cursor_shape_v1.c  wlr_damage_ring.c  wlr_data_control_v1.c  wlr_drm.c  wlr_drm_lease_v1.c  wlr_export_dmabuf_v1.c  wlr_ext_data_control_v1.c  wlr_ext_foreign_toplevel_list_v1.c  wlr_ext_image_copy_capture_v1.c  wlr_fixes.c  wlr_foreign_toplevel_management_v1.c  wlr_fractional_scale_v1.c  wlr_gamma_control_v1.c  wlr_idle_inhibit_v1.c  wlr_idle_notify_v1.c  wlr_input_device.c  wlr_input_method_v2.c  wlr_keyboard.c  wlr_keyboard_group.c  wlr_keyboard_shortcuts_inhibit_v1.c  wlr_layer_shell_v1.c  wlr_linux_dmabuf_v1.c  wlr_linux_drm_syncobj_v1.c  wlr_output_layer.c  wlr_output_layout.c  wlr_output_management_v1.c  wlr_output_power_management_v1.c  wlr_output_swapchain_manager.c  wlr_pointer.c  wlr_pointer_constraints_v1.c  wlr_pointer_gestures_v1.c  wlr_presentation_time.c  wlr_primary_selection.c  (+31 more)
wlroots/types/buffer/: buffer.c  client.c  dmabuf.c  readonly_data.c  resource.c
wlroots/types/data_device/: wlr_data_device.c  wlr_data_offer.c  wlr_data_source.c  wlr_drag.c
wlroots/types/ext_image_capture_source_v1/: base.c  foreign_toplevel.c  output.c  scene.c
wlroots/types/output/: cursor.c  output.c  render.c  state.c  swapchain.c
wlroots/types/scene/: drag_icon.c  layer_shell_v1.c  output_layout.c  subsurface_tree.c  surface.c  wlr_scene.c  xdg_shell.c
wlroots/types/seat/: wlr_seat.c  wlr_seat_keyboard.c  wlr_seat_pointer.c  wlr_seat_touch.c
wlroots/types/tablet_v2/: wlr_tablet_v2.c  wlr_tablet_v2_pad.c  wlr_tablet_v2_tablet.c  wlr_tablet_v2_tool.c
wlroots/types/xdg_shell/: wlr_xdg_popup.c  wlr_xdg_positioner.c  wlr_xdg_shell.c  wlr_xdg_surface.c  wlr_xdg_toplevel.c
wlroots/util/: addon.c  array.c  box.c  env.c  global.c  log.c  matrix.c  mem.c  meson.build  rect_union.c  region.c  set.c  shm.c  time.c  token.c  transform.c  utf8.c
wlroots/xcursor/: meson.build  wlr_xcursor.c  xcursor.c
wlroots/xwayland/: meson.build  server.c  shell.c  sockets.c  sockets.h  xwayland.c  xwm.c
wlroots/xwayland/selection/: dnd.c  incoming.c  outgoing.c  selection.c
(+545 files in other folders)
